-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 4.13.0-beta1, Qt Creator 12.0.0-beta2, Qt Creator 12.0.0
-
-
2921b94785c2b057b3e75096515939d8624a65b3 (qt-creator/qt-creator/master)
Broken since the first beta. 
- relates to
-
QTCREATORBUG-24950 Errors are not clickable anymore in Application output panel
-
- Closed
-
-
QTCREATORBUG-22800 4.10 RC1 breaks qMessagePattern clickable output
-
- Closed
-
-
QTCREATORBUG-24560 [REG 4.12 -> 4.13] Parsing QTest output in Application Output broken
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-24353 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 314499,3 | QtTestParser: Fix switching back to Status::NotHandled | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |